crates/core/tests/snapshots/snapshot_tests__golden_script_comparison_operators.snap
---
source: crates/core/tests/snapshot_tests.rs
expression: trace
---
steps:
  - step: 0
    view:
      kind: System
      message: "SetVar: 0 = 10"
    state:
      position: 0
      flags: {}
      vars: {}
      history_len: 0
      visual:
        background: ~
        music: ~
        characters: []
  - step: 1
    view:
      kind: System
      message: JumpIf
    state:
      position: 1
      flags: {}
      vars:
        0: 10
      history_len: 0
      visual:
        background: ~
        music: ~
        characters: []
  - step: 2
    view:
      kind: Dialogue
      speaker: Test
      text: EQ passed
    state:
      position: 3
      flags: {}
      vars:
        0: 10
      history_len: 0
      visual:
        background: ~
        music: ~
        characters: []
  - step: 3
    view:
      kind: System
      message: JumpIf
    state:
      position: 4
      flags: {}
      vars:
        0: 10
      history_len: 1
      visual:
        background: ~
        music: ~
        characters: []
  - step: 4
    view:
      kind: Dialogue
      speaker: Test
      text: NE passed
    state:
      position: 6
      flags: {}
      vars:
        0: 10
      history_len: 1
      visual:
        background: ~
        music: ~
        characters: []
  - step: 5
    view:
      kind: System
      message: JumpIf
    state:
      position: 7
      flags: {}
      vars:
        0: 10
      history_len: 2
      visual:
        background: ~
        music: ~
        characters: []
  - step: 6
    view:
      kind: Dialogue
      speaker: Test
      text: All tests passed
    state:
      position: 9
      flags: {}
      vars:
        0: 10
      history_len: 2
      visual:
        background: ~
        music: ~
        characters: []
